Tue Mar 28 11:56:56 2000  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Dirent.h"
	* ace/Dirent.cpp: The meaning of __ACE_INLINE__ is just the
	  opposite of ACE_LACKS_INLINE_FUNCTIONS (my fault.)  Rearrange
	  the logic for checking __ACE_INLINE__ and include "ace/Dirent.h"
	  in Dirent.cpp.

Tue Mar 28 06:00:00 2000  Michael Kircher  <Michael.Kircher@mchp.siemens.de>

	* Dirent.cpp,
	* Dirent.h: Renamed ACE_LACKS_INLINE_FUNCTIONS into __ACE_INLINE__ which
	  is the correct way of handling inlining differences.

	* ace/OS.h,
	  ace/OS.i: Win32 does not support <dirent> a set of functions to
	  retrieve the content of a directory. However, the Win32 functions
	  FindFirstFile and FindNextFile provide similar behavior. This change
	  added an emulation of dirent based on these functions. Changes were
	  made to ACE_OS::opendir, ACE_OS::readdir, and ACE_OS::closedir.

	* ace/config-win32-common.h: Added the defines ACE_HAS_DIRENT,
	  ACE_LACKS_TELLDIR, ACE_LACKS_SEEKDIR, ACE_LACKS_REWINDDIR and
	  ACE_LACKS_READDIR_R.
	  This was necessary to enable the above mentioned <dirent> emulation.


Mon Mar 27 16:58:03 2000  Yamuna Krishnamurthy  <yamuna@cs.wustl.edu>

	* ace/TkReactor.cpp:
	  Fixed the unused variable warning and ACE_Select_Reactor_Token
	  undeclared error.

Fri Mar 24 10:30:44 2000  Douglas C. Schmidt  <schmidt@tango.cs.wustl.edu>

	* ace/LSOCK.cpp (recv_handle): For some reason, Linux allocates an extra
	  handle when doing a recvmsg() with the MSG_PEEK flag set.
  	  Therefore, we need to close this.  Thanks to Rick Ohnemus
 	  <rjohnemus@systemware-inc.com> for reporting this.  Fixed [BUGID
 	  511].

	* examples/IPC_SAP/FILE_SAP/client.cpp. Fixed the formatting
	  to conform to ACE guidelines.  Thanks to Steve Luoma
 	  <stevel@dvc400.com> for motivating this.

Thu Mar 23 20:37:19 2000  David L. Levine  <levine@cs.wustl.edu>

        * bin/check_build_logs: removed leading "./" from log file names.
